# ibkr-dashboard

./: .gitignore  AGENTS.md  IBKR_Dashboard_V1_Promotion.md  IBKR_Dashboard_V2_PRD_持仓分析_v2.md  README.md  docker-compose.yml  ibkr-dashboard v2版本PRD.md  package.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py  mcp_context.py  mcp_server.py
backend/app/api/: currency_conversion.py  portfolio_analysis_contracts.py  response_models.py  time_normalization.py
backend/app/api/routes/: cash_flows.py  import_tasks.py  industry_mapping.py  manual_trades.py  overview.py  performance.py  portfolio_analysis.py  positions.py  (+5 more)
backend/app/core/: config.py  errors.py  logging.py  trace.py
backend/app/jobs/: daily_sync_job.py  manual_backfill_job.py  sync_scheduler.py
backend/app/models/: domain.py  xml_models.py
backend/app/repositories/: derived_repository.py  es_client.py  http_es_client.py  in_memory_es.py  industry_mapping_repository.py  raw_repository.py  settings_repository.py
backend/app/services/: account_currency.py  ai_narrative_service.py  analytics_service.py  auto_reconciliation_service.py  daily_performance_service.py  flex_client.py  industry_mapping_service.py  ingestion_service.py  manual_backfill_service.py  market_data_provider.py  mcp_tools.py  overview_risk_service.py  portfolio_analysis_service.py  quote_service.py  reconciliation_service.py  settings_service.py  telegram_service.py  trade_aggregation.py  xml_parser.py
backend/app/utils/: dates.py  longbridge.py  numbers.py  records.py  symbols.py
(+27 files in other folders)
