[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibkr-dashboard-backend"
version = "0.1.0"
description = "IBKR dashboard backend service"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "httpx",
    "apscheduler",
    "futu-api",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["."]
